prueba del viejo viejo

--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
     <div>
         <title>Pruebas version v0.1.0 cambio menor</title>
         <p>Probando como sería ir dando más archivos a github</p>
+       
+        <ul>
+            <li class="item3"></li>
+            <li class="item4"></li>
+            <li class="item5"></li>
+            <li class="item6"></li>
+            <li class="item7"></li>
+        </ul> 
+
     </div>
-
-
 
 </body>
 
