--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="from-container sing-in">
             <form>
-                <h1>iniciar sesion</h1>
+                <h1>sing-in</h1>
                 <div class="social-icons">
                     <i class="fa-brands fa-google-plus-g"></i>
                     <i class="fa-brands fa-facebook-f"></i>
