--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
 
+    <h1>Pruebas de versiones</h1>
+
     <div>
         <title>Pruebas version v0.1.0 cambio menor</title>
         <p>Probando como sería ir dando más archivos a github</p>
@@ -21,6 +23,7 @@
             <li class="item6"></li>
             <li class="item7"></li>
         </ul> 
+
 
     </div>
 
