--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li class="item5"></li>
             <li class="item6"></li>
             <li class="item7"></li>
+            <li class="item8"></li>
         </ul> 
 
     </div>
