--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
 
     <div>
-        <title>Pruebas version v0.1.0 cambio menor</title>
+        <h1> OpticSoft </h1>
+        <title>Pruebas version v0.0.1 cambio menor</title>
         <p>Probando como sería ir dando más archivos a github</p>
        
         <ul>
