--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styless.css">
+    <script src="index.js"></script>
     <title>Pruebas</title>
 </head>
 
@@ -16,12 +17,12 @@
         <p>Probando como sería ir dando más archivos a github</p>
        
         <ul>
-            <li class="item3"></li>
-            <li class="item4"></li>
-            <li class="item5"></li>
-            <li class="item6"></li>
-            <li class="item7"></li>
-            <li class="item8"></li>
+            <li class="item3">elemento 1</li>
+            <li class="item4">elemento 2</li>
+            <li class="item5">elemento 3</li>
+            <li class="item6">elemento 4</li>
+            <li class="item7">elemento 5</li>
+            <li class="item8">elemento 6</li>
         </ul> 
 
     </div>
