--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styless.css">
     <title>Modern login page</title>
 </head>
 <body>
@@ -58,6 +58,6 @@
             </div>
         </div>     
     </div>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
